[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/scenes/roster/HeroRosterEntry.gd" type="Script" id=1]

[node name="HeroRosterEntry" type="PanelContainer"]
margin_right = 272.0
margin_bottom = 124.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 265.0
margin_bottom = 117.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 258.0
margin_bottom = 14.0

[node name="NameLbl" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_right = 46.0
margin_bottom = 14.0
text = "Name: "

[node name="NameData" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 50.0
margin_right = 129.0
margin_bottom = 14.0
text = "James Smith"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 258.0
margin_bottom = 32.0

[node name="PowerRankLbl" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_right = 78.0
margin_bottom = 14.0
text = "Power rank: "

[node name="PowerRankData" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 82.0
margin_right = 98.0
margin_bottom = 14.0
text = "58"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 258.0
margin_bottom = 50.0

[node name="ActivityLbl" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 56.0
margin_bottom = 14.0
text = "Activity: "

[node name="ActivityData" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 60.0
margin_right = 207.0
margin_bottom = 14.0
text = "Waiting for assignment"

[node name="EnergyLbl" type="Label" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 258.0
margin_bottom = 68.0
text = "Energy: "

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 258.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 258.0
margin_bottom = 110.0
alignment = 1

[node name="AssingBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 136.0
margin_bottom = 20.0
text = "Assign"

[node name="FireBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 140.0
margin_right = 176.0
margin_bottom = 20.0
text = "Fire"

[connection signal="gui_input" from="." to="." method="_on_HeroRosterEntry_gui_input"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AssingBtn" to="." method="_on_AssingBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/FireBtn" to="." method="_on_FireBtn_pressed"]
